Fix menu on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,10 +1,10 @@
 /* mobile styles */
- #wrap { width:310px; margin-left:auto; margin-right:auto; overflow:hidden; }
+ #wrap { width:90%; margin-left:auto; margin-right:auto; overflow:hidden; }
 
- #nav { width:310px; background:none; height:auto; overflow:hidden; margin-bottom: 25px;  }
- #nav ul {	display: inline; list-style: none;  margin:0px; padding:0px; height:42px; line-height:42px;  }
- #nav ul li { float: left;  display: inline;  font-size: 12px; margin:0px; padding:0px;    }
- #nav ul li a { display:block; padding:20px; margin:0px;  width:320px; border-bottom:1px solid #ccc; }
+ #nav { width:100%; background:none; height:auto; overflow:hidden; margin-bottom: 25px;  }
+ #nav ul {	list-style: none;  margin:0px; padding:0px; height:42px; line-height:42px;  }
+ #nav ul li {  font-size: 12px; margin:0px; padding:0px;    }
+ #nav ul li a { display:block; padding:20px; margin:0px;  border-bottom:1px solid #ccc; }
  #nav ul li a:hover { }
 
 
